tests/conc/reject/chan_sendmis.hi
fn main():
    ch := channel(int, 4)
    send(ch, "nope")
    close(ch)
